[workspace]
members = [
    "bare",
    "threads",
    "competing",
    "core",
    "stream",
    "redis",
    "redis_bu",
]

[replace]
"tokio-core:0.1.0" = { git="https://github.com/tokio-rs/tokio-core", rev="623ce44" }
"tokio-service:0.1.0" = { git="https://github.com/tokio-rs/tokio-service", rev="92eccdc" }
