[package]
name = "redis"
version = "0.1.0"
authors = ["user"]

[dependencies]
futures = "0.1.2"
void = "1.0.2"
log = "0.3.4"
env_logger = "0.3.5"
tokio-core = { git="https://github.com/tokio-rs/tokio-core", rev="623ce44" }
tokio-proto = { git="https://github.com/tokio-rs/tokio-proto", rev="ea7bfa2" }
tokio-service = { git="https://github.com/tokio-rs/tokio-service", rev="92eccdc" }
